--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,17 @@
 ---
-layout: post-header
+layout: default
 ---
 <article class="l-reading">
-  <section>{{ content }}</section>
+  <section>
+    <header>
+      <h1 class="title">{{ page.title }}</h1>
+      {% if page.audio %}
+      <audio controls="controls">
+        <source type="audio/mp3" src="../../../assets/audio/{{ page.audio }}"></source>
+        <p>Please use a newer browser version to hear the audio recording.</p>
+      </audio>
+      {% endif %}
+    </header>
+    {{ content }}
+  </section>
 </article>
