--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,8 +7,9 @@ $bp-hands-wide: 48em;
 // $bp-wall
 
 // Typography
-$font-family-main: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-$font-family-headings: 'Cabin Sketch', 'Arial Black', serif, cursive;
+$system-fonts: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+$font-family-main: 'Source Sans Pro', $system-fonts;
+$font-family-headings: 'Cabin Sketch', $system-fonts;
 $font-size: 1.125rem;
 $font-size-h1: 2.5rem;
 $font-size-h2: 2rem;
